classDiagram
  class Profile {
    +string id
    +string fullName
    +string email
    +Role role
    +number pointsTotal
  }
  class Group {
    +string name
    +number startYear
    +number endYear
  }
  class Speciality {
    +string code
    +string name
  }
  class Category {
    +string name
    +string color
  }
  class Club {
    +string name
    +string slug
    +UserStatus status
  }
  class Activity {
    +string title
    +ActivityFormat format
    +Difficulty difficulty
    +ActivityStatus status
    +number points
    +string[] skills
  }
  class Application {
    +ApplicationStatus status
    +string motivation
    +string teacherComment
  }
  class ParticipationReport {
    +ReportStatus status
    +string reflection
    +number hoursSpent
    +string evidenceUrl
  }
  class Badge {
    +string title
    +string conditionType
    +number conditionValue
  }
  class MediaAsset {
    +string kind
    +number imageKey
    +string url
    +string fileId
  }
  class Repository {
    +listActivities(filters)
    +getActivityBySlug(slug)
    +studentData(studentId)
    +teacherQueue(teacherId)
    +adminData()
  }
  class Services {
    +submitApplication(actor,input)
    +submitReport(actor,input)
    +reviewReport(actor,id,status,feedback)
    +registerStudent(input)
  }

  Speciality "1" --> "many" Group
  Group "1" --> "many" Profile
  Profile "1" --> "many" Application
  Activity "1" --> "many" Application
  Application "1" --> "0..1" ParticipationReport
  Category "1" --> "many" Activity
  Club "1" --> "many" Activity
  Badge "1" --> "many" Profile
  MediaAsset "1" --> "many" Activity
  Repository ..> Profile
  Repository ..> Activity
  Services ..> Repository
